# ECOMEGA_X1_777

./: CMakeLists.txt  LAUNCH_OMEGA.bat  README.md  omega_ai_server.py  omega_network_dispatcher  omega_ploutus.snk  omega_ploutus_ai.cpp  omega_ploutus_ai_integration.c  omega_ploutus_ai_integration_linux.c  omega_ploutus_app.c  omega_ploutus_ce.vbs  omega_ploutus_config.txt  omega_ploutus_ducky.txt  omega_ploutus_protection.nrproj  omega_ploutus_ruby.rb  omega_ploutus_xp.bat  omegax_app.c  route_redirection_attack.py  test_evolution_report.json  test_integration.py
BadUSB_ECOMEGA_X1/: README.md  payload.txt
badusb_flipperzero/AI_Guided/: ai_guided_apdu_attacks.txt  ai_guided_atm_injection.txt  ai_guided_cryptojacking.txt  ai_guided_mobile_extraction.txt  ai_guided_nfc_jackpot.txt  ai_guided_payment_interception.txt  ai_guided_ransomware_deployment.txt  ai_guided_target_scanning.txt
badusb_flipperzero/File_System/: data_exfiltration.txt  file_analysis.txt  file_system_scanning.txt
badusb_flipperzero/NFC_Attacks/: nfc_capture.txt  nfc_cloning.txt  nfc_relay.txt  nfc_replay.txt  protocol_analysis.txt
badusb_flipperzero/Payment_System/: payment_cloning.txt  payment_interception.txt  payment_processing_control.txt  transaction_analysis.txt
badusb_flipperzero/Process_Injection/: advanced_injection.txt
